changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

autogen.sh: Error out if the various programs called aren't successful. This
  means we can hopefully get the first error in bug reports instead of errors
  caused by the first error later.
Arvid Norlander 2009-02-26

server/attack.c: Fix for bug 2019648: Too high experience gain with draining
    monsters.  Don't add more exp to monsters than the player lost by draining.
    Record original exp of player before draining and use that as a check in
    MIN() statement - because from old code, divisor is twice as much as
    we remove, very likely the old method will be less than actual lost exp.
MSW 2009-02-25

server/attack.c: Fix for bug 2021012: Do insane damage in arena - if
    characters are on battleground, do not reduce damage for them
    being friendly.
MSW 2009-02-24

Fix for bug 1988417 - rebalanced WC bug.
common/living.c: Remove unneeded if op->type==PLAYER right after closing
    brace for same if clause.  Move character_load to top of that code
    block.  Fix wc calculation so now if skill_level>=1 and not >1.
    Fix fallback method to divide characters overall level in calculating
    wc to give more sane results.  Add key/value wc_increase_rate so
    skills can be better tuned instead of having it hardcoded (it is
    still hardcoded as a fallback if that isn't set)
doc/Developers/skills: Update some notes on values in combat skills,
    especially the wc_increase_rate.
MSW 2009-02-22

plugins/cfpython/cfpython_archetype.c, plugins/cfpython/cfpython_object.c,
  plugins/cfpython/cfpython_party.c, plugins/cfpython/cfpython_region.c,